Updated leaflet library

--- a/sites/all/libraries/leaflet/spec/index.html
+++ b/sites/all/libraries/leaflet/spec/index.html
@@ -9,7 +9,7 @@
     <div id="mocha"></div>
     <script src="expect.js"></script>
    	<script type="text/javascript" src="../node_modules/mocha/mocha.js"></script>
-	<script type="text/javascript" src="happen.js"></script>
+	<script type="text/javascript" src="../node_modules/happen/src/happen.js"></script>
 	<script type="text/javascript" src="sinon.js"></script>
 
 	<!-- source files -->
@@ -56,8 +56,13 @@
 
 	<!-- /layer -->
 	<script type="text/javascript" src="suites/layer/FeatureGroupSpec.js"></script>
+	<script type="text/javascript" src="suites/layer/GeoJSONSpec.js"></script>
 	<script type="text/javascript" src="suites/layer/LayerGroupSpec.js"></script>
 	<script type="text/javascript" src="suites/layer/TileLayerSpec.js"></script>
+	<script type="text/javascript" src="suites/layer/PopupSpec.js"></script>
+
+	<!-- /layer/marker/ -->
+	<script type="text/javascript" src="suites/layer/marker/MarkerSpec.js"></script>
 
 	<!-- /layer/vector/ -->
 	<script type="text/javascript" src="suites/layer/vector/CircleSpec.js"></script>
